fixed spelling mistake

--- a/main.html
+++ b/main.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>This is from a rendered page</h1>
-    <h2>Don't always need the facy stuff, right?</h2>
+    <h2>Don't always need the fancy stuff, right?</h2>
 </body>
 </html>
