--- a/main.html
+++ b/main.html
@@ -9,5 +9,11 @@
 <body>
     <h1>This is from a rendered page</h1>
     <h2>Don't always need the fancy stuff, right?</h2>
+    <h3>Current Products:</h3>
+    <ul>
+        <li>TwiiterBot</li>
+        <li>Pickle-AI</li>
+        <li>Main Website</li>
+    </ul>
 </body>
 </html>
